--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "tailwind-merge": "^3.4.0",
     "typescript": "^4.9.5",
     "vaul": "^1.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yaml": "2.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
